Add page prototype

--- a/Game.Web/Views/Home/Index.cshtml
+++ b/Game.Web/Views/Home/Index.cshtml
@@ -2,7 +2,24 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div>
+    <h2>Join Game</h2>
+    <form>
+        Character name: <input required=""/>
+        <button type="submit">Join Game</button>
+    </form>
+</div>
+
+<div>
+    <h2>todo player name</h2>
+    <h3>Health</h3>
+    <p>TODO: display health</p>
+
+    <h3>Dead</h3>
+</div>
+
+<div> 
+    <h2>Other Players</h2>
+    TODO list all other players
 </div>
