--- a/Game.Web/Views/Shared/_Layout.cshtml
+++ b/Game.Web/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/signalr/signalr.min.js"></script>
+    <script src="~/lib/knockout/knockout-latest.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
