--- a/Game.Web/Views/Home/Index.cshtml
+++ b/Game.Web/Views/Home/Index.cshtml
@@ -34,9 +34,32 @@
         );
 
         document.signalRConnection.on('updatePlayerHealth',
-            function (playerName, health) {
+            function(playerName, health) {
                 //todo
             }
         );
+
+        var PlayerViewModel = function(playerName, health) {
+
+            var self = this;
+
+            self.attack = function() {
+                await document.signalRConnection.invoke("attack", self.playerName());
+            }
+
+            self.changeHelth = function(newHealth) {
+                self.health(newHealth);
+
+                if (newHealth <= 0) {
+                    self.isAlive(false);
+                }
+            }
+
+            self.playerName = ko.observable(playerName);
+            self.isAlive = ko.observable(true);
+            self.health = ko.observable(NaN);
+
+            self.changeHelth(health);
+        }
     </script>
 }
