Attempt to integrate Game.Web with Game.State

--- a/Game.Web/Views/Home/Index.cshtml
+++ b/Game.Web/Views/Home/Index.cshtml
@@ -116,7 +116,8 @@
 
             self.thisPlayer = ko.observable(new PlayerViewModel('', NaN));
 
-            self.otherPlayers = ko.observableArray();
+            self.otherPlayers = ko.observableArray()
+                .extend({ rateLimit: { timeout: 500, method: "notifyWhenChangesStop" } });
 
             self.joinGame = function() {
                 document.signalRConnection.invoke("joinGame", self.newPlayerName());
